--- a/styles/_badge.scss
+++ b/styles/_badge.scss
@@ -11,31 +11,39 @@
 
         &:before {
             content: attr(data-tip);
+            pointer-events: none;
             position: absolute;
+            top: -3rem;
             left: 50%;
             transform: translateX(-50%);
-            background-color: red;
-            top: -4rem;
+            background-color: inherit;
+            color: inherit;
+            font-size: 1rem;
+            font-weight: 500;
             height: 3rem;
             padding: 0 16px;
             border-radius: 8px;
             display: inline-flex;
             align-items: center;
             opacity: 0;
+            transition: opacity 0.3s ease, top 0.3s ease;
         }
 
         &:hover:before {
             opacity: 1;
+            top: -4rem;
         }
     }
 
     @each $color, $value in $colors {
         &--#{$color} {
             background-color: $value;
+        }
+    }
 
-            &[data-tip]:before {
-                background-color: $value;
-            }
+    @each $color, $value in $colors {
+        &--text--#{$color} {
+            color: $value;
         }
     }
 }
