--- a/styles/_text.scss
+++ b/styles/_text.scss
@@ -7,6 +7,16 @@
     font-weight: 900;
 }
 
+.h2 {
+    color: $black;
+    font-size: 2rem;
+    line-height: 2rem;
+    margin-bottom: 3.5rem;
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    text-align: center;
+}
+
 .p {
     font-size: 1rem;
     line-height: 1.5rem;
