--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -29,19 +29,11 @@ input {
 @import "buttons";
 @import "utilities";
 @import "container";
+@import "grid";
 
 
 
-.row {
-    display: flex;
-    flex-wrap: wrap;
 
-    > * {
-        flex-shrink: 0;
-        width: 100%;
-        max-width: 100%;
-    }
-}
 
 @mixin make-col($size: false) {
     @if $size {
