--- a/styles/_text.scss
+++ b/styles/_text.scss
@@ -1,20 +1,28 @@
-.h1 {
-    color: $primary;
+.h1,
+.h2 {
     font-size: 2rem;
     line-height: 2rem;
-    margin-bottom: 1rem;
     font-family: "Lato", sans-serif;
     font-weight: 900;
 }
 
+.h1 {
+    color: $primary;
+    margin-bottom: 1rem;
+}
+
 .h2 {
     color: $black;
-    font-size: 2rem;
-    line-height: 2rem;
     margin-bottom: 3.5rem;
+    text-align: center;
+}
+
+.h3 {
+    font-size: 1.25rem;
+    line-height: 1.25rem;
+    margin-bottom: 0.5rem;
     font-family: "Lato", sans-serif;
     font-weight: 900;
-    text-align: center;
 }
 
 .p {
