--- a/components/section/SectionAwaretrain/SectionAwaretrain.module.scss
+++ b/components/section/SectionAwaretrain/SectionAwaretrain.module.scss
@@ -3,6 +3,25 @@
 $primary: #4a72dd;
 $dark: #212749;
 
+.phone-card {
+    max-width: 24rem;
+    margin: 0 auto 2rem;
+
+    @include media-breakpoint-up(md) {
+        max-width: none;
+        margin: auto;
+    }
+}
+
+.card {
+    margin-right: 2.5rem;
+
+    @media (min-width: 433px) {
+        margin-left: 25%;
+        margin-right: 0;
+    }
+}
+
 .section {
     margin-bottom: 5rem;
 
@@ -12,7 +31,6 @@ $dark: #212749;
 }
 
 .phone {
-    margin-right: 3rem;
     overflow: hidden;
 
     &:before {
@@ -21,19 +39,18 @@ $dark: #212749;
         left: 25%;
         height: 1.5rem;
         position: absolute;
-        width: calc(50% - 3rem);
+        width: 50%;
         background-color: rgba($white, 0.25);
         border-bottom-left-radius: 1rem;
         border-bottom-right-radius: 1rem;
         z-index: 1;
     }
 
-    // TODO: min
-    @media (max-width: 432px) {
-        margin-right: 0rem;
+    @media (min-width: 433px) {
+        margin-right: 3rem;
 
         &:before {
-            width: 50%;
+            width: calc(50% - 3rem);
         }
     }
 
