--- a/components/section/SectionCycleCenter/SectionCycleCenter.module.scss
+++ b/components/section/SectionCycleCenter/SectionCycleCenter.module.scss
@@ -30,14 +30,15 @@ $primary: #282f33;
         margin-right: 0;
         border-radius: 1rem;
         border-top-left-radius: 2.5rem;
+        margin-bottom: 3.5rem;
         padding: 2rem;
 
         @include media-breakpoint-up(md) {
-            margin-right: 3.5rem;
+            margin-right: 3rem;
         }
 
         @include media-breakpoint-up(lg) {
-            margin-right: 3rem;
+            margin-bottom: 0;
         }
     }
 
