--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,6 +1,6 @@
 @use "sass:math";
 
-@mixin generate-utility($utility) {
+@mixin generate-utility($utility, $infix) {
     $values: map-get($utility, values);
 
     @if type-of($values) == "string" or type-of(nth($values, 1)) != "list" {
@@ -17,7 +17,7 @@
         $property-class: if(map-has-key($utility, class), map-get($utility, class), nth($properties, 1));
 
         @if $value != null {
-            .#{$property-class + "--" + $key} {
+            .#{$property-class + $infix + "--" + $key} {
                 @each $property in $properties {
                     #{$property}: $value;
                 }
