New profile picture, button hover/focus-visible styles, timeline updated

--- a/components/section/SectionCareer/components/Item/Item.module.scss
+++ b/components/section/SectionCareer/components/Item/Item.module.scss
@@ -22,4 +22,16 @@
         font-style: italic;
         display: flex;
     }
+
+    &--active {
+        background-color: $white;
+
+        &__title {
+            color: $primary;
+        }
+
+        &__company {
+            color: $primary;
+        }
+    }
 }
