--- a/styles/_text.scss
+++ b/styles/_text.scss
@@ -2,7 +2,7 @@
 .h2 {
     font-size: 2rem;
     line-height: 2rem;
-    font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 900;
 }
 
@@ -21,7 +21,7 @@
     font-size: 1.25rem;
     line-height: 1.25rem;
     margin-bottom: 0.5rem;
-    font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 900;
 }
 
@@ -37,5 +37,9 @@
 
     &--italic {
         font-style: italic;
+    }
+
+    a {
+        color: $black;
     }
 }
